# trezoa-sdk

./: .clippy.toml  .gitignore  Cargo.toml  README.md  SECURITY.md
.github/scripts/: add-team-to-ghsa.sh
.github/workflows/: add-team-to-ghsa.yml  main.yml  sysvar-comment.yml
account/: Cargo.toml
account-info/: Cargo.toml
account-info/src/: lib.rs
account-view/: Cargo.toml
account-view/src/: lib.rs
account/src/: lib.rs  state_traits.rs
address/: Cargo.toml
address-lookup-table-interface/: Cargo.toml
address-lookup-table-interface/src/: instruction.rs  lib.rs  state.rs
address/src/: error.rs  lib.rs  syscalls.rs
atomic-u64/: Cargo.toml
big-mod-exp/: Cargo.toml
big-mod-exp/benches/: big_mod_exp_bench.rs
big-mod-exp/src/: lib.rs
bincode/: Cargo.toml
bincode/src/: lib.rs
blake3-hasher/: Cargo.toml
blake3-hasher/src/: lib.rs
bls-signatures/: Cargo.toml
bls-signatures/benches/: bls_signatures.rs
bls-signatures/src/: keypair.rs  lib.rs  macros.rs  secret_key.rs
bls-signatures/src/proof_of_possession/: bytes.rs  conversion.rs  mod.rs  points.rs
bls-signatures/src/pubkey/: bytes.rs  conversion.rs  mod.rs  points.rs
bls-signatures/src/signature/: bytes.rs  conversion.rs  mod.rs  points.rs
bn254/: Cargo.toml
bn254/benches/: bn254.rs
bn254/src/: addition.rs  compression.rs  lib.rs  multiplication.rs  pairing.rs
bn254/tests/: curve_operations.rs
borsh/: Cargo.toml
borsh/src/: macros.rs
client-traits/: Cargo.toml
client-traits/src/: lib.rs
clock/: Cargo.toml
clock/src/: lib.rs  sysvar.rs
cluster-type/: Cargo.toml
cluster-type/src/: lib.rs
commitment-config/: Cargo.toml
compute-budget-interface/: Cargo.toml
compute-budget-interface/src/: lib.rs
cpi/: Cargo.toml
cpi/src/: lib.rs  syscalls.rs
curve25519/: Cargo.toml
curve25519/src/: edwards.rs  ristretto.rs  scalar.rs
define-syscall/: Cargo.toml
derivation-path/: Cargo.toml
derivation-path/src/: lib.rs
ed25519-program/: Cargo.toml
ed25519-program/src/: lib.rs
epoch-info/: Cargo.toml
epoch-info/src/: lib.rs
epoch-rewards/: Cargo.toml
epoch-rewards-hasher/: Cargo.toml
epoch-rewards-hasher/src/: lib.rs
epoch-rewards/src/: lib.rs  sysvar.rs
epoch-schedule/: Cargo.toml
epoch-schedule/src/: lib.rs  sysvar.rs
epoch-stake/: Cargo.toml
epoch-stake/src/: lib.rs
example-mocks/: Cargo.toml
example-mocks/src/: lib.rs
feature-gate-interface/: Cargo.toml
feature-gate-interface/src/: error.rs  instruction.rs  lib.rs  state.rs
fee-calculator/: Cargo.toml
fee-calculator/src/: lib.rs
fee-structure/: Cargo.toml
fee-structure/src/: lib.rs
file-download/: Cargo.toml
frozen-abi/: Cargo.toml
frozen-abi-macro/: Cargo.toml
frozen-abi-macro/src/: lib.rs
frozen-abi/src/: abi_digester.rs  abi_example.rs  lib.rs
genesis-config/: Cargo.toml
genesis-config/src/: lib.rs
hard-forks/: Cargo.toml
hard-forks/src/: lib.rs
hash/: Cargo.toml
hash/src/: lib.rs
inflation/: Cargo.toml
inflation/src/: lib.rs
instruction/: Cargo.toml
instruction-error/: Cargo.toml
instruction-error/src/: lib.rs
instruction-view/: Cargo.toml
instruction-view/src/: cpi.rs  lib.rs
instruction/src/: account_meta.rs  lib.rs  syscalls.rs
instructions-sysvar/: Cargo.toml
instructions-sysvar/src/: lib.rs
keccak-hasher/: Cargo.toml
keccak-hasher/src/: lib.rs
keypair/: Cargo.toml
keypair/src/: lib.rs  seed_derivable.rs  signable.rs
last-restart-slot/: Cargo.toml
last-restart-slot/src/: lib.rs  sysvar.rs
loader-v2-interface/: Cargo.toml
loader-v2-interface/src/: lib.rs
loader-v3-interface/: Cargo.toml
loader-v3-interface/src/: instruction.rs  lib.rs  state.rs
loader-v4-interface/: Cargo.toml
loader-v4-interface/src/: instruction.rs  state.rs
message/: Cargo.toml
message/src/: account_keys.rs  address_loader.rs  compiled_instruction.rs  compiled_keys.rs  inline_nonce.rs  legacy.rs  lib.rs  sanitized.rs
msg/: Cargo.toml
msg/src/: lib.rs  syscalls.rs
native-token/: Cargo.toml
native-token/src/: lib.rs
nonce/: Cargo.toml
nonce-account/: Cargo.toml
nonce-account/src/: lib.rs
nonce/src/: state.rs  versions.rs
offchain-message/: Cargo.toml
offchain-message/src/: lib.rs
package-metadata/: Cargo.toml
package-metadata-macro/: Cargo.toml
package-metadata-macro/src/: lib.rs
packet/: Cargo.toml
poh-config/: Cargo.toml
poseidon/: Cargo.toml
precompile-error/: Cargo.toml
presigner/: Cargo.toml
program/: Cargo.toml  README.md
program-entrypoint/: Cargo.toml
program-error/: Cargo.toml
program-log/: Cargo.toml  README.md
program-log-macro/: Cargo.toml  README.md
program-memory/: Cargo.toml
program-option/: Cargo.toml
program-pack/: Cargo.toml
pubkey/: Cargo.toml
quic-definitions/: Cargo.toml
rent/: Cargo.toml
reward-info/: Cargo.toml
sanitize/: Cargo.toml
scripts/: build-sbf.sh  check-crates.sh  check-detached-minimal-versions.sh  check-downstream-agave.sh  check-nits.sh  check-no-std.sh  order-crates-for-publishing.py  patch-crates-functions.sh  patch-crates-no-header.sh  publish-rust.sh  reserve-cratesio-package-name.sh  test-bench.sh  test-coverage.sh  test-miri.sh
sdk/: Cargo.toml  README.md
sdk-ids/: Cargo.toml
sdk-macro/: Cargo.toml
sdk-wasm-js/: Cargo.toml  README.md
sdk-wasm-js-tests/: Cargo.toml
secp256k1-program/: Cargo.toml
secp256k1-recover/: Cargo.toml
secp256r1-program/: Cargo.toml
seed-derivable/: Cargo.toml
seed-phrase/: Cargo.toml
serde/: Cargo.toml
serde-varint/: Cargo.toml
serialize-utils/: Cargo.toml
sha256-hasher/: Cargo.toml
short-vec/: Cargo.toml
shred-version/: Cargo.toml
signature/: Cargo.toml
signer/: Cargo.toml
signer-store/: Cargo.toml
slot-hashes/: Cargo.toml
slot-history/: Cargo.toml
stable-layout/: Cargo.toml
system-interface/: Cargo.toml  README.md
system-transaction/: Cargo.toml
system-wasm-js/: Cargo.toml
sysvar/: Cargo.toml
sysvar-id/: Cargo.toml
time-utils/: Cargo.toml
transaction/: Cargo.toml
transaction-error/: Cargo.toml
validator-exit/: Cargo.toml
vote-interface/: Cargo.toml
(+134 files in other folders)
