[package]
name = "trezoa-account-info"
description = "Trezoa AccountInfo and related definitions."
documentation = "https://docs.rs/trezoa-account-info"
version = "3.1.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
bincode = ["dep:bincode", "dep:serde_core"]

[dependencies]
bincode = { workspace = true, optional = true }
serde_core = { workspace = true, optional = true }
trezoa-address = { workspace = true, features = ["decode"] }
trezoa-program-error = { workspace = true }
trezoa-program-memory = { workspace = true }

[dev-dependencies]
trezoa-address = { workspace = true, features = ["atomic"] }
