[package]
name = "trezoa-account-view"
description = "Lightweight representation of a runtime account"
documentation = "https://docs.rs/trezoa-account-view"
version = "1.0.0"
rust-version = "1.81.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
copy = ["trezoa-address/copy"]

[dependencies]
trezoa-address = { workspace = true }
trezoa-program-error = { workspace = true }

[lints]
workspace = true
