[package]
name = "trezoa-account"
description = "Trezoa Account type"
documentation = "https://docs.rs/trezoa-account"
version = "3.3.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
bincode = ["dep:bincode", "dep:trezoa-sysvar", "serde"]
dev-context-only-utils = ["bincode", "dep:qualifier_attr"]
frozen-abi = [
    "dep:trezoa-frozen-abi",
    "dep:trezoa-frozen-abi-macro",
    "trezoa-pubkey/frozen-abi",
]
serde = [
    "dep:serde",
    "dep:serde_bytes",
    "dep:serde_derive",
    "trezoa-pubkey/serde",
]

[dependencies]
bincode = { workspace = true, optional = true }
qualifier_attr = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
trezoa-account-info = { workspace = true }
trezoa-clock = { workspace = true }
trezoa-frozen-abi = { workspace = true, optional = true }
trezoa-frozen-abi-macro = { workspace = true, optional = true }
trezoa-instruction-error = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-sdk-ids = { workspace = true }
trezoa-sysvar = { workspace = true, features = ["bincode"], optional = true }

[dev-dependencies]
trezoa-account = { path = ".", features = ["dev-context-only-utils"] }
trezoa-pubkey = { workspace = true, features = ["std"] }
