[package]
name = "trezoa-address-lookup-table-interface"
description = "Trezoa address lookup table interface."
documentation = "https://docs.rs/trezoa-address-lookup-table-interface"
version = "3.0.1"
rust-version = "1.81.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
bincode = [
    "dep:bincode",
    "dep:trezoa-instruction",
    "dep:trezoa-instruction-error",
    "serde",
    "trezoa-instruction/bincode",
]
bytemuck = ["dep:bytemuck", "trezoa-pubkey/bytemuck"]
dev-context-only-utils = ["bincode", "bytemuck"]
frozen-abi = ["dep:trezoa-frozen-abi", "dep:trezoa-frozen-abi-macro", "serde"]
serde = ["dep:serde", "dep:serde_derive", "serde/alloc", "trezoa-pubkey/serde"]

[dependencies]
bincode = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
trezoa-clock = { workspace = true }
trezoa-frozen-abi = { workspace = true, features = ["frozen-abi"], optional = true }
trezoa-frozen-abi-macro = { workspace = true, features = ["frozen-abi"], optional = true }
trezoa-instruction = { workspace = true, features = ["std"], optional = true }
trezoa-instruction-error = { workspace = true, optional = true }
trezoa-pubkey = { workspace = true }
trezoa-sdk-ids = { workspace = true }
trezoa-slot-hashes = { workspace = true }

[target.'cfg(not(target_os = "trezoa"))'.dependencies]
trezoa-pubkey = { workspace = true, features = ["curve25519"] }

[dev-dependencies]
trezoa-address-lookup-table-interface = { path = ".", features = [
    "dev-context-only-utils",
] }
trezoa-hash = { workspace = true, features = ["atomic"] }
trezoa-pubkey = { workspace = true, features = ["std"] }

[lints]
workspace = true
