[package]
name = "trezoa-big-mod-exp"
description = "Trezoa big integer modular exponentiation"
documentation = "https://docs.rs/trezoa-big-mod-exp"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[target.'cfg(not(target_os = "trezoa"))'.dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }

[target.'cfg(target_os = "trezoa")'.dependencies]
trezoa-define-syscall = { workspace = true }

[dev-dependencies]
array-bytes = { workspace = true }
criterion = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "big_mod_exp_bench"
harness = false
