[package]
name = "trezoa-bincode"
description = "Trezoa bincode utilities"
documentation = "https://docs.rs/trezoa-bincode"
version = "3.1.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bincode = { workspace = true }
serde_core = { workspace = true }
trezoa-instruction-error = { workspace = true }

[dev-dependencies]
trezoa-system-interface = { workspace = true, features = ["bincode"] }

[lints]
workspace = true
