[package]
name = "trezoa-blake3-hasher"
description = "Trezoa BLAKE3 hashing"
documentation = "https://docs.rs/trezoa-blake3-hasher"
version = "3.1.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
blake3 = ["dep:blake3"]

[dependencies]
trezoa-hash = { workspace = true, features = ["decode"] }

[target.'cfg(any(target_os = "trezoa", target_arch = "bpf"))'.dependencies]
trezoa-define-syscall = { workspace = true }

[target.'cfg(not(any(target_os = "trezoa", target_arch = "bpf")))'.dependencies]
blake3 = { workspace = true, optional = true }

[dev-dependencies]
trezoa-blake3-hasher = { path = ".", features = ["blake3"] }

[lints]
workspace = true
