[package]
name = "trezoa-bls-signatures"
description = "Trezoa BLS Signatures"
documentation = "https://docs.rs/trezoa-bls-signatures"
version = "3.0.0"
rust-version = "1.81.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[lib]
crate-type = ["rlib"]

[features]
bytemuck = ["dep:bytemuck"]
default = ["std"]
frozen-abi = ["dep:trezoa-frozen-abi", "dep:trezoa-frozen-abi-macro", "std"]
parallel = ["dep:rayon"]
serde = ["dep:cfg_eval", "dep:serde", "dep:serde_with"]
trezoa-signer-derive = ["dep:trezoa-signer", "dep:trezoa-signature", "dep:subtle"]
std = ["dep:serde_json"]

[dependencies]
base64 = { workspace = true }
bytemuck = { workspace = true, optional = true }
cfg_eval = { workspace = true, optional = true }
pairing = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, features = ["macros"], optional = true }
trezoa-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
trezoa-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "trezoa"))'.dependencies]
blst = { workspace = true }
blstrs = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand = "0.8" # blstrs is still on rand_core v0.6, so pin this for now
rayon = { workspace = true, optional = true }
trezoa-signature = { workspace = true, optional = true }
trezoa-signer = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }

[dev-dependencies]
bincode = { workspace = true }
criterion = { workspace = true }
trezoa-bls-signatures = { path = ".", features = ["std"] }
trezoa-keypair = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "bls_signatures"
harness = false
