[package]
name = "trezoa-bn254"
description = "Trezoa BN254"
documentation = "https://docs.rs/trezoa-bn254"
version = "3.2.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
include = ["src/**/*"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "trezoa"))'.dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }

[target.'cfg(target_os = "trezoa")'.dependencies]
trezoa-define-syscall = { workspace = true }

[dev-dependencies]
array-bytes = { workspace = true }
criterion = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "bn254"
harness = false

[lints]
workspace = true
