[package]
name = "trezoa-client-traits"
description = "Traits for Trezoa clients"
documentation = "https://docs.rs/trezoa-client-traits"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
trezoa-account = { workspace = true }
trezoa-commitment-config = { workspace = true }
trezoa-epoch-info = { workspace = true }
trezoa-hash = { workspace = true }
trezoa-instruction = { workspace = true }
trezoa-keypair = { workspace = true }
trezoa-message = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-signature = { workspace = true }
trezoa-signer = { workspace = true }
trezoa-system-interface = { workspace = true, features = ["bincode"] }
trezoa-transaction = { workspace = true, features = ["bincode"] }
trezoa-transaction-error = { workspace = true }
