[package]
name = "trezoa-clock"
description = "Trezoa Clock and Time Definitions"
documentation = "https://docs.rs/trezoa-clock"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
serde = ["dep:serde", "dep:serde_derive"]
sysvar = ["dep:trezoa-sdk-ids", "dep:trezoa-sysvar-id"]

[dependencies]
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
trezoa-sdk-ids = { workspace = true, optional = true }
trezoa-sdk-macro = { workspace = true }
trezoa-sysvar-id = { workspace = true, optional = true }

[dev-dependencies]
trezoa-clock = { path = ".", features = ["sysvar"] }
static_assertions = { workspace = true }
