[package]
name = "trezoa-cpi"
description = "Trezoa Cross-program Invocation"
documentation = "https://docs.rs/trezoa-cpi"
version = "3.1.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
trezoa-account-info = { workspace = true }
trezoa-instruction = { workspace = true, features = ["std"] }
trezoa-program-error = { workspace = true }
trezoa-pubkey = { workspace = true }

[target.'cfg(target_os = "trezoa")'.dependencies]
trezoa-define-syscall = { workspace = true }
trezoa-stable-layout = { workspace = true }

[dev-dependencies]
trezoa-program-entrypoint = { workspace = true }
trezoa-pubkey = { workspace = true, features = ["curve25519"] }
trezoa-sdk-ids = { workspace = true }
trezoa-system-interface = { workspace = true, features = ["bincode"] }
static_assertions = { workspace = true }

[lints]
workspace = true
