[package]
name = "trezoa-curve25519"
description = "Trezoa Curve25519 Syscalls"
documentation = "https://docs.rs/trezoa-curve25519"
version = "4.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[dependencies]
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
# this crate uses `subtle::CtOption<Scalar>::into_option` via curve25519-dalek,
# which requires subtle v2.6.1, but curve25519-dalek only requires v2.3.0
# The line below help users of this crate obtain correct subtle version.
# (that is, the version specified by our workspace or greater minor version, not the version specified by curve25519-dalek)
subtle = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "trezoa"))'.dependencies]
curve25519-dalek = { workspace = true, features = ["serde"] }

[target.'cfg(target_os = "trezoa")'.dependencies]
trezoa-define-syscall = { workspace = true }

[lints]
workspace = true
