[package]
name = "trezoa-ed25519-program"
description = "Instructions for the Trezoa ed25519 native program"
documentation = "https://docs.rs/trezoa-ed25519-program"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
trezoa-instruction = { workspace = true, features = ["std"] }
trezoa-sdk-ids = { workspace = true }

[lints]
workspace = true
