[package]
name = "trezoa-epoch-info"
description = "Information about a Trezoa epoch."
documentation = "https://docs.rs/trezoa-epoch-info"
version = "3.1.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }

[lints]
workspace = true
