[package]
name = "trezoa-epoch-rewards-hasher"
description = "Trezoa epoch rewards hasher."
documentation = "https://docs.rs/trezoa-epoch-rewards-hasher"
version = "3.1.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
siphasher = { workspace = true }
trezoa-address = { workspace = true }
trezoa-hash = { workspace = true }

[dev-dependencies]
trezoa-address = { workspace = true, features = ["atomic"] }
trezoa-hash = { workspace = true, features = ["atomic"] }

[lints]
workspace = true
