[package]
name = "trezoa-epoch-rewards"
description = "Trezoa epoch rewards sysvar."
documentation = "https://docs.rs/trezoa-epoch-rewards"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
frozen-abi = [
    "dep:trezoa-frozen-abi",
    "dep:trezoa-frozen-abi-macro",
    "trezoa-hash/frozen-abi",
    "std",
]
serde = ["dep:serde", "dep:serde_derive", "serde/alloc", "trezoa-hash/serde"]
std = ["serde?/std"]
sysvar = ["dep:trezoa-sdk-ids", "dep:trezoa-sysvar-id"]

[dependencies]
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
trezoa-frozen-abi = { workspace = true, optional = true }
trezoa-frozen-abi-macro = { workspace = true, optional = true }
trezoa-hash = { workspace = true, features = ["decode"] }
trezoa-sdk-ids = { workspace = true, optional = true }
trezoa-sdk-macro = { workspace = true }
trezoa-sysvar-id = { workspace = true, optional = true }

[dev-dependencies]
trezoa-epoch-rewards = { path = ".", features = ["sysvar"] }

[lints]
workspace = true
