[package]
name = "trezoa-epoch-schedule"
description = "Configuration for Trezoa epochs and slots."
documentation = "https://docs.rs/trezoa-epoch-schedule"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
frozen-abi = ["dep:trezoa-frozen-abi", "dep:trezoa-frozen-abi-macro"]
serde = ["dep:serde", "dep:serde_derive"]
sysvar = ["dep:trezoa-sdk-ids", "dep:trezoa-sysvar-id"]

[dependencies]
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
trezoa-frozen-abi = { workspace = true, optional = true }
trezoa-frozen-abi-macro = { workspace = true, optional = true }
trezoa-sdk-ids = { workspace = true, optional = true }
trezoa-sdk-macro = { workspace = true }
trezoa-sysvar-id = { workspace = true, optional = true }

[dev-dependencies]
trezoa-clock = { workspace = true }
trezoa-epoch-schedule = { path = ".", features = ["sysvar"] }
static_assertions = { workspace = true }

[lints]
workspace = true
