[package]
name = "trezoa-epoch-stake"
description = "Trezoa epoch stake syscall API"
documentation = "https://docs.rs/trezoa-epoch-stake"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[dependencies]
trezoa-pubkey = { workspace = true }

[target.'cfg(target_os = "trezoa")'.dependencies]
trezoa-define-syscall = { workspace = true }

[lints]
workspace = true
