[package]
name = "trezoa-example-mocks"
description = "Trezoa mock types for use in examples"
documentation = "https://docs.rs/trezoa-example-mocks"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
bincode = ["trezoa-system-interface/bincode"]

[dependencies]
serde = { workspace = true }
serde_derive = { workspace = true }
trezoa-address-lookup-table-interface = { workspace = true }
trezoa-clock = { workspace = true }
trezoa-hash = { workspace = true }
trezoa-instruction = { workspace = true }
trezoa-keccak-hasher = { workspace = true }
trezoa-message = { workspace = true, features = ["serde"] }
trezoa-nonce = { workspace = true }
trezoa-pubkey = { workspace = true, features = ["std"] }
trezoa-sdk-ids = { workspace = true }
trezoa-system-interface = { workspace = true }
thiserror = { workspace = true }
