[package]
name = "trezoa-feature-gate-interface"
description = "Trezoa feature gate program interface."
documentation = "https://docs.rs/trezoa-feature-gate-interface"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = "1.81.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
bincode = [
    "dep:bincode",
    "dep:trezoa-account",
    "dep:trezoa-account-info",
    "dep:trezoa-instruction",
    "dep:trezoa-rent",
    "dep:trezoa-system-interface",
    "serde",
]
dev-context-only-utils = ["bincode"]
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
bincode = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
trezoa-account = { workspace = true, optional = true }
trezoa-account-info = { workspace = true, optional = true }
trezoa-instruction = { workspace = true, optional = true }
trezoa-program-error = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-rent = { workspace = true, optional = true }
trezoa-sdk-ids = { workspace = true }
trezoa-system-interface = { workspace = true, optional = true, features = [
    "bincode",
] }

[dev-dependencies]
trezoa-feature-gate-interface = { path = ".", features = ["dev-context-only-utils"] }
trezoa-pubkey = { workspace = true, features = ["std"] }
strum = { workspace = true }
strum_macros = { workspace = true }

[lints]
workspace = true
