[package]
name = "trezoa-fee-calculator"
description = "Trezoa transaction fee calculation"
documentation = "https://docs.rs/trezoa-fee-calculator"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
frozen-abi = ["dep:trezoa-frozen-abi", "dep:trezoa-frozen-abi-macro"]
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
trezoa-frozen-abi = { workspace = true, optional = true }
trezoa-frozen-abi-macro = { workspace = true, optional = true }

[dev-dependencies]
trezoa-clock = { workspace = true }
static_assertions = { workspace = true }
