[package]
name = "trezoa-genesis-config"
description = "A Trezoa network's genesis config."
documentation = "https://docs.rs/trezoa-genesis-config"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
frozen-abi = ["dep:trezoa-frozen-abi", "dep:trezoa-frozen-abi-macro"]
serde = [
    "dep:serde",
    "dep:serde_derive",
    "trezoa-account/serde",
    "trezoa-clock/serde",
    "trezoa-cluster-type/serde",
    "trezoa-epoch-schedule/serde",
    "trezoa-fee-calculator/serde",
    "trezoa-inflation/serde",
    "trezoa-poh-config/serde",
    "trezoa-rent/serde",
]

[dependencies]
bincode = { workspace = true }
chrono = { workspace = true, features = ["alloc"] }
memmap2 = { workspace = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
trezoa-account = { workspace = true }
trezoa-clock = { workspace = true }
trezoa-cluster-type = { workspace = true }
trezoa-epoch-schedule = { workspace = true }
trezoa-fee-calculator = { workspace = true }
trezoa-frozen-abi = { workspace = true, optional = true }
trezoa-frozen-abi-macro = { workspace = true, optional = true }
trezoa-hash = { workspace = true }
trezoa-inflation = { workspace = true }
trezoa-keypair = { workspace = true }
trezoa-poh-config = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-rent = { workspace = true }
trezoa-sdk-ids = { workspace = true }
trezoa-sha256-hasher = { workspace = true }
trezoa-shred-version = { workspace = true }
trezoa-signer = { workspace = true }
trezoa-time-utils = { workspace = true }

[dev-dependencies]
trezoa-genesis-config = { path = ".", features = ["serde"] }
trezoa-pubkey = { workspace = true, features = ["rand"] }

[lints]
workspace = true
