[package]
name = "trezoa-hard-forks"
description = "The list of slot boundaries at which a hard fork should occur."
documentation = "https://docs.rs/trezoa-hard-forks"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
frozen-abi = ["dep:trezoa-frozen-abi", "dep:trezoa-frozen-abi-macro"]
serde = ["dep:serde", "dep:serde_derive", "serde/alloc"]

[dependencies]
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
trezoa-frozen-abi = { workspace = true, optional = true, features = ["frozen-abi"] }
trezoa-frozen-abi-macro = { workspace = true, optional = true, features = ["frozen-abi"] }

[lints]
workspace = true
